--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -2,15 +2,15 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  outline: none;
+  image-rendering: -webkit-optimize-contrast;
 }
 
 html,
 body {
   overflow-x: hidden;
   font-family: $font-body;
-  // font-weight: 500;
   color: $color-body;
-  // font-size: 18px;
 }
 
 h1,
